API: Added Lambda function and more request types

--- a/dotnet/.gitignore
+++ b/dotnet/.gitignore
@@ -1,3 +1,5 @@
+NaturalFacade.ApiLambdas/bin
+NaturalFacade.ApiLambdas/obj
 NaturalFacade.ApiServices/bin
 NaturalFacade.ApiServices/obj
 NaturalFacade.Common/bin
