API: Fixed error and added build file

--- a/dotnet/NaturalFacade.ApiLambdas/NaturalFacade.ApiLambdas.csproj
+++ b/dotnet/NaturalFacade.ApiLambdas/NaturalFacade.ApiLambdas.csproj
@@ -9,6 +9,8 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <!-- Generate ready to run images during publishing to improve cold start time. -->
     <PublishReadyToRun>true</PublishReadyToRun>
+    <Authors>Steven Moore</Authors>
+    <Product>NaturalFacade</Product>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
