--- a/dotnet/NaturalFacade.SandboxConsole/NaturalFacade.SandboxConsole.csproj
+++ b/dotnet/NaturalFacade.SandboxConsole/NaturalFacade.SandboxConsole.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ExamplePayload.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="ExamplePayload.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Natural.Aws.Mock" Version="1.0.7" />
   </ItemGroup>
 
