--- a/angular/angular.json
+++ b/angular/angular.json
@@ -27,6 +27,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -102,5 +106,7 @@
       }
     }
   },
-  "defaultProject": "NaturalFacade"
+  "cli": {
+    "analytics": false
+  }
 }
