Build: Fix for Angular build

--- a/infrastructure/NgCodeBuild.yml
+++ b/infrastructure/NgCodeBuild.yml
@@ -9,7 +9,7 @@ phases:
   install:
     commands:
       - echo Installing source NPM dependencies...
-      - cd angular && npm install
+      - cd angular && npm install --force
       - npm install -g @angular/cli
   build:
     commands:
