--- a/infrastructure/NgCodeBuild.yml
+++ b/infrastructure/NgCodeBuild.yml
@@ -13,7 +13,7 @@ phases:
       - npm install -g @angular/cli
   pre_build:
     commands:
-      - "json=$(jq -n --arg cu \"$COGNITO_URL\" '{production: true, cognitoUrl: $cu, openLinkNewTab: true }')"
+      - "json=$(jq -n --arg ver \"$VERSION\" --arg cu \"$COGNITO_URL\" '{production: true, version: $ver, cognitoUrl: $cu, openLinkNewTab: true }')"
       - "script=\"export const environment = $json ;\""
       - echo $script > src/environments/environment.prod.ts
   build:
