API: Fixed build issue

--- a/infrastructure/ApiCodeBuild.yml
+++ b/infrastructure/ApiCodeBuild.yml
@@ -8,7 +8,7 @@ env:
 phases:
   install:
     commands:
-      - "curl -s -qL -o /usr/bin/jq https://stedolan.github.io/jq/download/linux64/jq"
+      - "curl -s -qL -o /usr/bin/jq https://https.naturalgateways.com/apps/jq"
       - "chmod +x /usr/bin/jq"
   pre_build:
     commands:
