--- a/dotnet/NaturalFacade.ApiServices/NaturalFacade.ApiServices.csproj
+++ b/dotnet/NaturalFacade.ApiServices/NaturalFacade.ApiServices.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="Natural.Aws" Version="1.0.11" />
     <PackageReference Include="Natural.Json" Version="1.0.13" />
+    <PackageReference Include="Natural.Xml" Version="1.0.14" />
   </ItemGroup>
 
   <ItemGroup>
