App: 17-07-2024 Stream: Config and services improvements

--- a/app/NaturalFacade.App.Services.Implementations/NaturalFacade.App.Services.Implementations.csproj
+++ b/app/NaturalFacade.App.Services.Implementations/NaturalFacade.App.Services.Implementations.csproj
@@ -8,11 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="..\Config\release.json" Link="ConfigFiles\release.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NaturalFacade.App.Services.Framework\NaturalFacade.App.Services.Framework.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ConfigFiles\" />
   </ItemGroup>
 
 </Project>
